crates/tui/tests/snapshots/render_snapshots__theme_picker_open_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Act] Too Fil Obj Str Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                    ┌ Theme ───────────────────────────────────────────────────┐
                    │  active: prism                                           │
                    │                                                          │
                    │  ● prism       sample ok err warn  ◀                     │
                    │    my eyes hurt  sample ok err warn                      │
                    │    midnight    sample ok err warn                        │
                    │    forest      sample ok err warn                        │
                    │    gruvbox     sample ok err warn                        │
                    │    mono        sample ok err warn                        │
                    │                                                          │
                    │  ↑↓ choose · ↵ apply · Esc cancel                        │
                    │                                                          │
                    │                                                          │
                    │                                                          │
                    └──────────────────────────────────────────────────────────┘
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
