crates/tui/tests/snapshots/render_snapshots__thinking_stream_collapsed_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. prompt "think about this" •
▌ think about this                                                 │
                                                                   │
◇ [thinking… 56 chars — Ctrl-T to expand]                          │
◆ PRISM                                                            │
  Based on my reasoning, here is the answer.                       │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend  [Ctrl-T reasoning]  I   Ctrl-C quit  │
