crates/tui/tests/snapshots/render_snapshots__thinking_stream_expanded_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Activity] Tools Files Objects
                                                                   │
❯ You                                                              │  1. prompt "think about this" •
▌ think about this                                                 │
                                                                   │
◇ Let me reason about this. The user is asking a question.         │
                                                                   │
◆ PRISM                                                            │
  Based on my reasoning, here is the answer.                       │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
