crates/tui/tests/snapshots/render_snapshots__tiny_terminal_basic_chat_40x12.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New ses│ Workspace
response: PRISM▲│ [Act] Too Fil Obj Art
TUI is running ║│
in deterministi║│  1. prompt "Hello" •
test mode.     █│
               ▼│
┌ Prompt ──────┐│
│ Type a messag││
│              ││
│              ││
└──────────────┘│
  Ready  model: │
