crates/tui/tests/snapshots/render_snapshots__toast_visible_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 1055
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Too Fil Obj Str Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Ente▌ theme: forest
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
