crates/tui/tests/snapshots/render_snapshots__tool_error_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 408
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │ 1 tools
❯ You                                                              │
▌ submit job                                                       │  1. prompt "submit job" •
                                                                   │
  ⚙ Running compute_submit                                         │
  ✗ [RED indeterminate] compute_submit: Error: budget exceeded     │
($50.00 limit)                                                     │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
