crates/tui/tests/snapshots/render_snapshots__tool_result_descriptor_card_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 3976
expression: rendered
---
 ‹ back  New session    Ctrl-P · ?                                 │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │ 1 tools · 1 ✓
❯ You                                                              │
▌ Look up MgB2                                                     │  1. prompt "Look up MgB2" •
                                                                   │  2. tool hea_descriptors ✓
  ✓ [YELLOW screening] hea_descriptors: CoCrFeMnNi:                │      CoCrFeMnNi: solid_solutio…
solid_solution, VEC=8.0                                            │
    SOURCE   KIND OF… COUNT EVIDENCE           FETCHED             │
    hea_des… compute…     — [YELLOW screening] not reported        │
    evidence [YELLOW screening]: computed by a cited method        │
    DESCRIPTOR             VALUE        UNIT                       │
    delta_H_mix_kJ_per_mol -4.16        kJ/mol                     │
        Miedema binary mixing enthalpies, Takeuchi & Inoue (2005)  │
        pair table                                                 │
    VEC                    8.0          electrons/atom             │
        valence electron concentration table _VEC (Guo & Liu       │
        2011)                                                      │
    omega                  not computed dimensionless              │
        Yang & Zhang Ω = Tm·ΔS_mix/|ΔH_mix|, Tm from pymatgen      │
        Element.melting_point                                      │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: —   [INPUT]    Ctrl-C quit                         │
