crates/tui/tests/snapshots/render_snapshots__tool_result_source_not_reported_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 3942
expression: rendered
---
 ‹ back  New session    Ctrl-P · ?                                 │ Workspace
· PRISM ready                                                      │ [Act] Too Fil Obj Str Art
                                                                   │ 1 tools · 1 ✓
❯ You                                                              │
▌ Look up MgB2                                                     │  1. prompt "Look up MgB2" •
                                                                   │  2. tool execute_python ✓
  ✓ [unclassified] execute_python: stdout: 42                      │      stdout: 42
    SOURCE NOT REPORTED BY execute_python                          │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: —   [INPUT]    Ctrl-C quit                         │
