crates/tui/tests/snapshots/render_snapshots__tool_result_source_table_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session    Ctrl-P · ?                                 │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │ 1 tools · 1 ✓
❯ You                                                              │
▌ Look up MgB2                                                     │  1. • prompt "Look up MgB2"
                                                                   │  2. ✓ tool lookup_structure
  ✓ [YELLOW screening] lookup_structure: found MgB2 (mp-763) —     │      found MgB2 (mp-763) — P6/…
P6/mmm, 3 atoms                                                    │
    SOURCE   KIND OF… FOUND EVIDENCE           FETCHED             │
    Materia… crystal…     1 [YELLOW screening] 2026-09-02 14:10    │
UTC                                                                │
    OQMD     crystal…     0 [YELLOW screening] 2026-09-02 14:10    │
UTC                                                                │
    evidence [YELLOW screening]: computed by a cited method        │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: —  tok/s:      —   [INPUT]    Ctrl-C quit       │
