crates/tui/tests/snapshots/render_snapshots__tool_success_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Activity] Tools Files Objects
                                                                   │ 1 tools · 1 ✓
❯ You                                                              │
▌ sample alloy                                                     │  1. prompt "sample alloy" •
                                                                   │  2. tool sample_material ✓
  ⚙ Running sample_material                                        │
  ✓ [YELLOW screening] sample_material: W0.3 Mo0.2 Ta0.3 Nb0.2     │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
